# rust_portfolio

./: Cargo.toml  README.md  index.html
src/: main.rs  route.rs
src/components/: blog.rs  contact_me.rs  mod.rs  nav_bar.rs  nav_tab.rs  profile.rs
style/: main.css
