[package]
name = "rust_portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
material-yew = { version = "0.3", features = ["button", "top-app-bar", "top-app-bar-fixed"] }
gloo-console = "0.2.3"
wasm-bindgen = "0.2.84"
