[package]
name = "rust_portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
gloo-console = "0.2.3"
wasm-bindgen = "0.2.84"
yew-router = "0.17.0"

[dependencies.material-yew]
version = "0.3"
features = ["button", "top-app-bar", "top-app-bar-fixed", "tabs"]
